--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
 
+<!DOCTYPE html>
+<html lang="en-US">
+
+<!-- Mirrored from www.jeffnhorner.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Feb 2019 05:25:17 GMT -->
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Lima Web Developer &#38; Designer That Builds Websites | Larissa Swisher</title>
+  <link rel="stylesheet" href="../maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="../maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="shortcut icon" href="assets/images/jnhIcon.png">
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/responsive.css">
+</head>
+<body id="page-1">
+
+  <div id="main-content"><!-- main content -->
+
+    <div id="left-side"><!-- left side content -->
+      <div id="particles-js"></div>
+    </div> <!-- / left side content-->
+
+    <div id="right-side"><!-- right side content -->
+
+      <nav class="navbar navbar-inverse navbar-default"><!-- navigation -->
+        <div class="container nav-container">
+          <div class="navbar-header">
+            <button id="nav-menu-btn" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-nav-collapse" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <i id="x-menu-btn" class="fa fa-times hide"></i>
+            </button>
+          </div>
+          <div class="collapse navbar-collapse" id="bs-nav-collapse">
+            <ul class="nav navbar-nav">
+              <li><a class="navitem" href="index.html">Home</a></li>
+              <li><a class="navitem" href="pages/about.html">About</a></li>
+              <li><a class="navitem" href="pages/portfolio.html">Portfolio</a></li>
+              <li><a class="navitem" href="pages/learn-to-code.html">Learn to Code</a></li>
+              <li><a class="navitem nav-link-contact" href="pages/contact.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav><!-- / navigation -->
+
+      <div id="home"><!-- right side home content -->
+        <h4>Larissa Swisher</h4>
+        <div class="cc-container-main">
+          <h1>Fullstack Developer</h1>
+          <p>Passionate purpose-driven Web Developer & Designer based in Houston, Texas with an emphasis on making online experiences memorable.</p>
+          <div class="profile-list">
+            <a href="https://www.facebook.com/jeffnhorner" target="_blank" title="My Facebook Profile"><i class="fa fa-facebook profiles" aria-hidden="true"></i></a>
+            <a href="https://www.twitter.com/jeffnhorner" target="_blank" title="My Twitter Profile"><i class="fa fa-twitter profiles" aria-hidden="true"></i></a>
+            <a href="https://www.instagram.com/jeffnhorner" target="_blank" title="My Instagram Profile"><i class="fa fa-instagram profiles" aria-hidden="true"></i></a>
+            <a href="https://www.linkedin.com/in/jeff-horner-bb48124b/" target="_blank" title="My LinkedIn Profile"><i class="fa fa-linkedin-square profiles" aria-hidden="true"></i></a>
+            <a href="https://github.com/jhorner32" target="_blank"><i class="fa fa-github-square profiles"></i></a>
+              <a href="https://www.youtube.com/watch?v=Lfg_FT3ssMQ&list=RDMMLfg_FT3ssMQ&start_radio=1" target="_blank" title="My video profile"></a>
+            <a href="https://codepen.io/jhorner32/" target="_blank" title="My Codepen Profile"><i class="fa fa-codepen profiles" aria-hidden="true"></i></a>
+            <a href="https://www.freecodecamp.org/jhorner32" target="_blank" title="My FreeCodeCamp Profile"><i class="fa fa-free-code-camp profiles" aria-hidden="true"></i></a>
+          </div>
+          <div class="cta">
+            <a id="connect" href="pages/portfolio.html">See My Work</a>
+            <a id="jobs" href="pages/contact.html">Get In Touch!</a>
+          </div>
+        </div>
+      </div><!-- / right side home content -->
+
+    </div><!-- / of right side content -->
+
+  </div> <!-- / main content -->
+
+    <script src="../code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+    <script src="../maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
+    <script type="text/javascript" src="js/scripts.js"></script>
+
+</body>
+
+<!-- Mirrored from www.jeffnhorner.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Feb 2019 05:25:24 GMT -->
+</html>
